# libdrm

./: Android.mk  Makefile.am  Makefile.sources  configure.ac  xf86drmMode.h
amdgpu/: Android.mk  automake.mk
etnaviv/: Android.mk  automake.mk  etnaviv-symbol-check
exynos/: automake.mk
freedreno/: Android.mk  automake.mk  freedreno-symbol-check  freedreno_ringbuffer.h
intel/: Android.mk  Makefile.am  Makefile.sources  automake.mk  intel-symbol-check  intel_bufmgr.c  intel_bufmgr.h  intel_bufmgr_gem.c  intel_bufmgr_priv.h  note
nouveau/: Android.mk  automake.mk  nouveau-symbol-check
omap/: automake.mk
radeon/: Android.mk  automake.mk  radeon-symbol-check  radeon_bo.c  radeon_cs_gem.c
tegra/: automake.mk  tegra-symbol-check
tests/: Makefile.am
tests/amdgpu/: Makefile.am
tests/etnaviv/: Makefile.am
tests/exynos/: Makefile.am
tests/kms/: Makefile.am
tests/modeprint/: Makefile.am  modeprint.c
tests/modetest/: Android.mk  Makefile.am  buffers.c  cursor.c  modetest.c
tests/nouveau/: Makefile.am
tests/proptest/: Makefile.am  proptest.c
tests/radeon/: Makefile.am
tests/tegra/: Makefile.am
tests/util/: Android.mk  Makefile.am  format.c  kms.c  pattern.c
tests/vbltest/: Makefile.am  vbltest.c
vc4/: automake.mk
